--- a/timepicker/scss/_timepicker.scss
+++ b/timepicker/scss/_timepicker.scss
@@ -120,7 +120,6 @@ svg {
   border-radius: 2px;
   overflow-y: auto;
   visibility: hidden;
-  opacity: 0;
 }
 
 .listbox-item {
